Escaped not visible in html anymore

--- a/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Reorder.html
+++ b/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Reorder.html
@@ -15,7 +15,7 @@
 		        <div th:each="song : ${playlistSongs}">
 		            <div class="card drag-item wide" draggable="true">
 		                <input type="hidden" name="songIds" th:value="${song.id}"/>
-		                <span th:text="${song.title}"></span>
+		                <span th:text="${#strings.unescapeJava(song.title)}"></span>
 		            </div>
 				</div>
 	        	<input type="hidden" name="playlistId" th:value="${playlistId}"/>
